Fix spacing in sidebars

--- a/scss/components/_components.sidebars.scss
+++ b/scss/components/_components.sidebars.scss
@@ -6,6 +6,9 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  padding: $small-value;
+  padding-top: $medium-value;
+  padding-right: $small-value;
+  padding-bottom: $small-value;
+  padding-left: $small-value;
   background-color: $alpha-color;
 }
